src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Total_Years_of_Experience__c</fullName>
        <label>Total Years of Experience</label>
        <summarizedField>History__c.Years_of_Experience__c</summarizedField>
        <summaryForeignKey>History__c.User_Account__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>VISTA_Grantee_Member_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox for VISTA Grantee Member Management permission set</description>
        <label>VISTA Grantee Member Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Validation_of_Reports__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox to assign Validation of Reports permission set</description>
        <label>Validation of Reports</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Verify_Account_Number__c</fullName>
        <label>Verify Account Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verify_Routing_Number__c</fullName>
        <label>Verify Routing Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Verify_SSN__c</fullName>
        <label>Verify SSN</label>
        <length>9</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>View_Costshare_Invoices__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox for View Costshare Invoices permission set</description>
        <label>View Costshare Invoices</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vista_Sponsor_Verification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>checkbox for Vista Sponsor Verification permission set</description>
        <label>Vista Sponsor Verification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>W_O_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field created for assigning permission set to applicant</description>
        <label>W/O Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Would_you_like_to_receive_texts__c</fullName>
        <label>Would you like to receive texts?</label>
        <picklist>
            <controllingField>Is_this_a_Mobile_Number__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Years_of_Experience__c</fullName>
        <description>This field value sums up the total experience of the applicant and is pulled from the History object .</description>
        <label>Years of Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>perSequence__c</fullName>
        <displayFormat>{0}</displayFormat>
        <label>perSequence</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>total_year_of_experience__c</fullName>
        <label>total  year of experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>with_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field for assigning permission set to applicant</description>
        <label>with Budget</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Record_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>Grantee,Grantee Admin,Expert Reviewer</value>
        </filters>
        <label>All User Accounts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>Expert_Reviewers</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Submitted_date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>Expert Reviewer</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Expert Reviewers - Submitted</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Expert_Reviewers1</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Submitted_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>Expert Reviewer</value>
        </filters>
        <label>Expert Reviewers</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Recipients_of_CNCS_Resources</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>Grantee,Grantee Admin</value>
        </filters>
        <label>Recipients of CNCS Resources</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>GO_Group</group>
            <group>PO_Group</group>
            <group>SGO_Group</group>
            <group>SPO_Group</group>
            <group>XO_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Sample_List_View</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Area_of_Expertise__c</field>
            <operation>equals</operation>
            <value>Education,CNCS,Environment,Other</value>
        </filters>
        <label>Sample List View</label>
        <sharedTo>
            <group>OGPO_Group</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Submitted_Expert_Reviewers</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>State_of_Residence__c</columns>
        <columns>Status__c</columns>
        <columns>Submitted_date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Type__c</field>
            <operation>equals</operation>
            <value>Expert Reviewer</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted</value>
        </filters>
        <label>Submitted Expert Reviewers</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Expert_Reviewer</fullName>
        <active>true</active>
        <label>Expert Reviewer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grantee</fullName>
        <active>true</active>
        <label>Grantee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grantee_Admin</fullName>
        <active>true</active>
        <label>Grantee Admin</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Accommodation_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(AND(ISPICKVAL(Reasonable_Accommodations_Required__c, &apos;Yes&apos;) ,ISBLANK(If_Yes_describe_what_is_needed__c)),true,false)</errorConditionFormula>
        <errorDisplayField>If_Yes_describe_what_is_needed__c</errorDisplayField>
        <errorMessage>Please enter the Reason what accommodation is needed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Account_Number_Match</fullName>
        <active>true</active>
        <errorConditionFormula>$RecordType.Name = &apos;Expert Reviewer&apos; &amp;&amp; NOT(ISNULL(Account_Number__c)) &amp;&amp; Account_Number__c &lt;&gt; Verify_Account_Number__c</errorConditionFormula>
        <errorDisplayField>Account_Number__c</errorDisplayField>
        <errorMessage>Account Number does not match</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Comments_to_Applicant_should_be_filled</fullName>
        <active>false</active>
        <description>When the Status = &quot;Pending - SAI&quot;, Comments to Applicant field should be entered.</description>
        <errorConditionFormula>AND( ISPICKVAL(Status__c, &quot;Pending - SAI&quot;),  Comments_to_Applicant__c = &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Comments_to_Applicant__c</errorDisplayField>
        <errorMessage>Please enter your comments in the &quot;Comments to Applicant&quot; field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_of_Birth</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNULL(Date_of_Birth__c)), Date_of_Birth__c  &gt; TODAY())</errorConditionFormula>
        <errorDisplayField>Date_of_Birth__c</errorDisplayField>
        <errorMessage>Date of Birth cannot be greater than the current date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Description</fullName>
        <active>false</active>
        <errorConditionFormula>AND(ISPICKVAL(How_did_you_hear_about_CNCS_Reviews__c, &apos;Other&apos;),
 ISBLANK(Please_Specify__c))</errorConditionFormula>
        <errorDisplayField>How_did_you_hear_about_CNCS_Reviews__c</errorDisplayField>
        <errorMessage>If selected &quot;other&quot;, please provide the description</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DescriptionRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Reasonable_Accommodations_Required__c, &apos;Yes&apos;), 
ISBLANK(If_Yes_describe_what_is_needed__c))</errorConditionFormula>
        <errorMessage>Please describe what is needed for reasonable accommodations in the &apos;If Yes, describe what is needed&apos; field.&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>NoDescription</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
OR(
ISPICKVAL(How_did_you_hear_about_CNCS_Reviews__c, &apos;Email/recruitment flyer&apos;),
ISPICKVAL(How_did_you_hear_about_CNCS_Reviews__c, &apos;Listserv or Newsletter&apos;), 
ISPICKVAL(How_did_you_hear_about_CNCS_Reviews__c, &apos;Recommended by friend or colleague&apos;),
ISPICKVAL(How_did_you_hear_about_CNCS_Reviews__c, &apos;CNCS Website (NationalService.gov)&apos;)),
NOT(ISBLANK(Please_Specify__c)))</errorConditionFormula>
        <errorDisplayField>How_did_you_hear_about_CNCS_Reviews__c</errorDisplayField>
        <errorMessage>You cannot enter description when you select this option</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_phone_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OtherPhone != null, NOT(REGEX(OtherPhone,&quot;\\D*?(\\d\\D*?){10}&quot;)))</errorConditionFormula>
        <errorDisplayField>OtherPhone</errorDisplayField>
        <errorMessage>Secondary Phone should be 10 Digit number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Password</fullName>
        <active>false</active>
        <errorConditionFormula>New_Password__c  ==  Re_Enter_Password__c</errorConditionFormula>
        <errorMessage>Password do not match.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Primary_Phone_validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT(ISBLANK(Primary_Phone__c)), 
	NOT(REGEX(Primary_Phone__c,&quot;\\D*?(\\d\\D*?){10}&quot;)) )</errorConditionFormula>
        <errorDisplayField>Primary_Phone__c</errorDisplayField>
        <errorMessage>Primary Phone should be 10 Digit number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Routing_Number_Match</fullName>
        <active>true</active>
        <errorConditionFormula>$RecordType.Name = &apos;Expert Reviewer&apos; &amp;&amp; NOT(ISNULL(Routing_Number__c)) &amp;&amp; Routing_Number__c &lt;&gt;  Verify_Routing_Number__c</errorConditionFormula>
        <errorDisplayField>Verify_Routing_Number__c</errorDisplayField>
        <errorMessage>Routing Number does not match</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_Mask</fullName>
        <active>false</active>
        <errorConditionFormula>AND(NOT(ISNUMBER( SSN__c )),NOT($Profile.Name = &quot;Applicant&quot;))</errorConditionFormula>
        <errorDisplayField>SSN__c</errorDisplayField>
        <errorMessage>Enter only number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SSN_Match</fullName>
        <active>true</active>
        <errorConditionFormula>$RecordType.Name = &apos;Expert Reviewer&apos; &amp;&amp; NOT(ISNULL(SSN__c)) &amp;&amp; SSN__c &lt;&gt; Verify_SSN__c</errorConditionFormula>
        <errorDisplayField>Verify_SSN__c</errorDisplayField>
        <errorMessage>SSN dont match</errorMessage>
    </validationRules>
</CustomObject>